# claude-or

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/claude_or/: cli.py  config.py  logger.py
tests/: test_cli.py  test_config.py  test_e2e.py  test_logger.py
